--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -60,7 +60,7 @@ library(hypegrammaR)
 ##### The data
 `load_data` takes only one argument `file`, the path to the csv file. 
 ```{r}
-assessment_data<-load_data(file = "../tests/testthat/testdata.csv")
+assessment_data<-load_data(file = "../tests/testthat/data.csv")
 ```
 Conditions:
 
@@ -85,9 +85,9 @@ Now turn your sampling frame into a weighting function with `map_to_weighting`. 
 
 ```{r}
 myweighter<-map_to_weighting(sampling.frame = sampling_frame,
-                             data.stratum.column = "strata",
+                             data.stratum.column = "stratification",
                              sampling.frame.population.column = "population",
-                             sampling.frame.stratum.column = "strata", 
+                             sampling.frame.stratum.column = "strata names", 
                              data = assessment_data)
 ```
 
@@ -105,9 +105,9 @@ The parameters are:
 ```{r}
 
 questionnaire<-load_questionnaire(data = assessment_data,
-                                  questions.file = "../tests/testthat/kobo questions.csv",
-                                  choices.file = "../tests/testthat/kobo choices.csv",
-                                  choices.label.column.to.use = "label"
+                                  questions = "../tests/testthat/kobo questions.csv",
+                                  choices = "../tests/testthat/kobo choices.csv",
+                                  choices.label.column.to.use = "label::English"
                                              )
 
 ```
@@ -120,12 +120,12 @@ Conditions:
 #### Identify your analysis parameters
 
 - what are the column headers of your dependent and independent variables, and what are their data types?
-    - this Example: *"primary_hc_provider" (categorical)* and *"shelter_type" (categorical)*
+    - this Example: *"sourceexpenses" (categorical)* and *"informalsettlement" (categorical)*
 - what type of hypothesis do you have?
     - this Example: the *difference between groups*
 
 #### map to the analysis case
-For this example, our hypothesis is that households in informal settlements received different assistance compared to non-informal settlements.
+For this example, our hypothesis is that idp or refugee households received different assistance compared host community hh.
 
 
 ```{r}
@@ -144,9 +144,9 @@ You can find out what exactly you can/should enter for these parameters by runni
 Now you use the inputs loaded above to an analysis result:
 ```{r}
 
-assistance_informal_settlements<-map_to_result(data = assessment_data,
-                      dependent.var = "primary_hc_provider",
-                      independent.var = 'primary_hc_provider',
+source_expenses_informal_settlements<-map_to_result(data = assessment_data,
+                      dependent.var = "sourceexpenses",
+                      independent.var = 'informalsettlement',
                       case = my_case,
                       weighting = myweighter,
                       questionnaire = questionnaire)
@@ -159,7 +159,7 @@ assistance_informal_settlements<-map_to_result(data = assessment_data,
 First, we add labels to the result (assuming that you've loaded a questionnaire):
 
 ```{r, warning=F}
-assistance_informal_settlements<-map_to_labeled(result = assistance_informal_settlements,
+source_expenses_informal_settlements<-map_to_labeled(result = source_expenses_informal_settlements,
                                                 questionnaire = questionnaire)
 ```
 
@@ -167,8 +167,8 @@ Finally, we can get visualisations, tables etc.:
 
 
 ```{r, warning=F}
-chart<- map_to_visualisation(assistance_informal_settlements)
-table<-map_to_table(assistance_informal_settlements)
+chart<- map_to_visualisation(source_expenses_informal_settlements)
+table<-map_to_table(source_expenses_informal_settlements)
 chart
 table
 
