--- a/vignettes/example_project.Rmd
+++ b/vignettes/example_project.Rmd
@@ -28,8 +28,8 @@ weights<-map_to_weighting(sampling.frame = samplingframe,
                                data = assessment_data)
 
 questionnaire<-load_questionnaire(data = assessment_data,
-                                             questions.file = "../tests/testthat/kobo questions.csv",
-                                             choices.file = "../tests/testthat/kobo choices.csv",
+                                             questions = "../tests/testthat/kobo questions.csv",
+                                             choices = "../tests/testthat/kobo choices.csv",
                                   choices.label.column.to.use = "label::English"
                                              )
 
