--- a/vignettes/the_grammar_of_hypothesis.Rmd
+++ b/vignettes/the_grammar_of_hypothesis.Rmd
@@ -84,8 +84,8 @@ Finally the questionnaire, which depends on the question and the choices sheet a
 ```{r}
 
 questionnaire<-load_questionnaire(data = assessment_data,
-                                             questions.file = "../tests/testthat/kobo questions.csv",
-                                             choices.file = "../tests/testthat/kobo choices.csv",
+                                             questions = "../tests/testthat/kobo questions.csv",
+                                             choices = "../tests/testthat/kobo choices.csv",
                                   choices.label.column.to.use = "label::English"
                                              )
 
