fixed vignettes data structure

--- a/vignettes/example_project.Rmd
+++ b/vignettes/example_project.Rmd
@@ -10,28 +10,30 @@ vignette: >
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
 ```
 
 
 ```{r,include=F,echo=F}
 library(hypegrammaR)
 
-assessment_data<-load_data("../tests/testthat/testdata.csv")
+assessment_data<-load_data("../data/testdata.csv")
 
-samplingframe<-load_samplingframe("../tests/testthat/test_samplingframe.csv")
+samplingframe<-load_samplingframe("../data/test_samplingframe.csv")
 
 weights<-map_to_weighting(sampling.frame = samplingframe,
-                               data.stratum.column = "stratification",
-                               sampling.frame.population.column = "population",
-                               sampling.frame.stratum.column = "strata names",
-                               data = assessment_data)
+                          data.stratum.column = "stratification",
+                          sampling.frame.population.column = "population",
+                          sampling.frame.stratum.column = "strata.names",
+                          data = assessment_data)
 
 questionnaire<-load_questionnaire(data = assessment_data,
-                                             questions = "../tests/testthat/kobo questions.csv",
-                                             choices = "../tests/testthat/kobo choices.csv",
-                                  choices.label.column.to.use = "label::English"
-                                             )
+                                  questions = "../data/test_questionnaire_questions.csv",
+                                  choices = "../data/test_questionnaire_choices.csv",
+                                  choices.label.column.to.use = "label::English")
 
 ```
 
@@ -111,7 +113,7 @@ vis<-edu1 %>% map_to_labeled(questionnaire) %>%  map_to_visualisation
 vis
 ```
 
-```{r}
+```{r, warning = FALSE}
 
 map_to_result(assessment_data,"hhexperienced",
               case=map_to_case('direct_reporting','categorical'),
