--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Quickstart"
-author: "Martin Barner"
+author: "Martin Barner / Eliora Henzler"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -44,7 +44,7 @@ get all your files in csv format first:
 #### Install the hypegrammaR package
 This line you only have to run _once_ when using hypegrammaR for the first time, or to update to a new version.
 ```{r,eval=F}
-remotes::install_github("mabafaba/hypegrammaR",build_opts = c(), ref = "training")
+remotes::install_github("ellieallien/hypegrammaR",build_opts = c(), ref = "master")
 ```
 (the `build_opts = c()` makes sure the package includes all extra help pages & documentation)
 For this step only, you need a more or less stable internet connection.
@@ -60,7 +60,7 @@ library(hypegrammaR)
 ##### The data
 `load_data` takes only one argument `file`, the path to the csv file. 
 ```{r}
-assessment_data<-load_data(file = "../tests/testthat/data.csv")
+assessment_data<-load_data(file = "../data/testdata.csv")
 ```
 Conditions:
 
@@ -78,7 +78,7 @@ The sampling frame should be a csv file with one column with strata names, one c
 
 ```{r}
 
-sampling_frame<-hypegrammaR::load_samplingframe(file = "../tests/testthat/test_samplingframe.csv")
+sampling_frame<-load_samplingframe(file = "../data/test_samplingframe.csv")
 ```
 
 Now turn your sampling frame into a weighting function with `map_to_weighting`. We see that the relevant columns in the sampling frame are called "strata names" and "population". The column in the data correspoinding to the strata names is called "stratification" in this data set. We need to supply these column names as arguments to `map_to_weighing`:
@@ -87,7 +87,7 @@ Now turn your sampling frame into a weighting function with `map_to_weighting`. 
 myweighter<-map_to_weighting(sampling.frame = sampling_frame,
                              data.stratum.column = "stratification",
                              sampling.frame.population.column = "population",
-                             sampling.frame.stratum.column = "strata names", 
+                             sampling.frame.stratum.column = "strata.names", 
                              data = assessment_data)
 ```
 
@@ -105,8 +105,8 @@ The parameters are:
 ```{r}
 
 questionnaire<-load_questionnaire(data = assessment_data,
-                                  questions = "../tests/testthat/kobo questions.csv",
-                                  choices = "../tests/testthat/kobo choices.csv",
+                                  questions = "../data/test_questionnaire_questions.csv",
+                                  choices = "../data/test_questionnaire_choices.csv",
                                   choices.label.column.to.use = "label::English"
                                              )
 
