--- a/vignettes/apply_analysis_plan.Rmd
+++ b/vignettes/apply_analysis_plan.Rmd
@@ -29,11 +29,11 @@ library(dplyr)
 For details please see <a href="input_formats.html">Input formats & loading files</a>
 
 ```{r,warning=F,message=F,error=F}
-assessment_data<-load_data("./data/testdata.csv")
+assessment_data<-load_data("../data/testdata.csv")
 ```
 
 ```{r,warning=F,message=F,error=F}
-samplingframe<-load_samplingframe("./data/test_samplingframe.csv")
+samplingframe<-load_samplingframe("../data/test_samplingframe.csv")
 ```
 
 ```{r,warning=F,message=F,error=F}
@@ -47,8 +47,8 @@ weights<-map_to_weighting(sampling.frame = samplingframe,
 ```{r,warning=F,message=F,error=F}
 
 questionnaire<-load_questionnaire(data = assessment_data,
-                                  questions = "./data/test_questionnaire_questions.csv",
-                                  choices = "./data/test_questionnaire_choices.csv",
+                                  questions = "../data/test_questionnaire_questions.csv",
+                                  choices = "../data/test_questionnaire_choices.csv",
                                   choices.label.column.to.use = "label::English"
 )
 ```
