--- a/vignettes/apply_analysis_plan.Rmd
+++ b/vignettes/apply_analysis_plan.Rmd
@@ -12,7 +12,8 @@ vignette: >
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = F
 )
 library(knitr)
 
@@ -32,33 +33,36 @@ library(dplyr)
 For details please see <a href="input_formats.html">Input formats & loading files</a>
 
 ```{r,warning=F,message=F,error=F}
-assessment_data<-load_data("../tests/testthat/testdata.csv")
+stop(getwd())
+assessment_data<-read.csv("../tests/testthat/testdata.csv",stringsAsFactors = F)
 ```
 
 ```{r,warning=F,message=F,error=F}
-samplingframe<-load_samplingframe("../tests/testthat/test_samplingframe.csv")
+samplingframe<-read.csv("../tests/testthat/test_samplingframe.csv",stringsAsFactors = F)
 ```
 
 ```{r,warning=F,message=F,error=F}
 weights<-map_to_weighting(sampling.frame = samplingframe,
                           data.stratum.column = "stratification",
                           sampling.frame.population.column = "population",
-                          sampling.frame.stratum.column = "strata names",
+                          sampling.frame.stratum.column = "strata.names",
                           data = assessment_data)
 ```
 
 ```{r,warning=F,message=F,error=F}
+questions<-read.csv("../tests/testthat/test_questionnaire_questions.csv")
+choices<-read.csv("../tests/testthat/test_questionnaire_choices.csv")
 
 questionnaire<-load_questionnaire(data = assessment_data,
-                                  questions = "../tests/testthat/kobo questions.csv",
-                                  choices = "../tests/testthat/kobo choices.csv",
+                                  questions = questions,
+                                  choices = choices,
                                   choices.label.column.to.use = "label::English"
 )
 ```
 
 ```{r,warning=F,message=F,error=F}
 
-analysisplan<-load_analysisplan("../tests/testthat/analysisplan.csv")
+analysisplan<-load_analysisplan(file = "../tests/testthat/test_analysisplan.csv")
 
 ```
 
@@ -76,9 +80,9 @@ list_of_results <- assessment_data %>%   from_analysisplan_map_to_output(analysi
 ### Output as html
 ```{r,eval = F}
 
-# list_of_results %>% map_to_template(questionnaire = questionnaire,
-#                                     dir = "../",
-#                                     filename = "my_example_report.html")
+list_of_results %>% map_to_template(questionnaire = questionnaire,
+                                    dir = "../",
+                                    filename = "my_example_report.html")
 
 ```
 
