--- a/vignettes/example_project.Rmd
+++ b/vignettes/example_project.Rmd
@@ -14,118 +14,6 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r,include=F,echo=F}
-library(hypegrammaR)
-
-assessment_data<-load_data("../tests/testthat/testdata.csv")
-
-samplingframe<-load_samplingframe("../tests/testthat/test_samplingframe.csv")
-
-weights<-map_to_weighting(sampling.frame = samplingframe,
-                               data.stratum.column = "stratification",
-                               sampling.frame.population.column = "population",
-                               sampling.frame.stratum.column = "strata names",
-                               data = assessment_data)
-
-questionnaire<-load_questionnaire(data = assessment_data,
-                                             questions = "../tests/testthat/kobo questions.csv",
-                                             choices = "../tests/testthat/kobo choices.csv",
-                                  choices.label.column.to.use = "label::English"
-                                             )
-
-```
-
-
-
-
-
-# Needs Overview
-
-How do needs differ across regions? We will look at this by sector.
-
-## Health
-
-```{r,include=F,warning=F,echo=F}
-
-
-case<-map_to_case(hypothesis.type = "group_difference",
-                  dependent.var.type = "numerical",
-                  independent.var.type = "categorical")
-
-
-result<-map_to_result(assessment_data,
-                      dependent.var = "health_need",
-                      independent.var = "region",
-                      case=case,
-                      weighting = weights,
-                      questionnaire = questionnaire)
-
-
-```
-
-
-```{r,warning=F,echo=F}
-
-vis<-result %>% map_to_labeled(questionnaire) %>% map_to_visualisation
-
-```
-
-```{r,include=F}
-label_pvalue <- function(x, digits = 3){
-  if (x < 10^-digits) return(paste('<', 10^-digits))
-  paste('=', round(x, digits))
-}
-
-```
-It appears that the health need differ significantly (p `r label_pvalue(result$hypothesis.test$result$p.value)`) across regions. 
-We can see that less clearly in a heatmap:
-
-```{r,warning=F,echo=F,message=F}
-vis<-result %>% map_to_labeled(questionnaire) %>% map_to_visualisation_heatmap
-vis
-```
-
-And of course completely unreadable would be a table, but hey:
-```{r,echo=F,asis=T,warning=FALSE}
-result %>% map_to_labeled(questionnaire) %>% map_to_table
-```
-
-## Experienced
-```{r,echo=F,asis=T,warning=FALSE}
-case<-map_to_case(hypothesis.type = 'group_difference',dependent.var.type = 'categorical',independent.var.type = 'categorical')
-design<-map_to_design(assessment_data,weighting_function = weights)
-
-
-
-sumstat<-map_to_summary_statistic(design,"hhexperienced","region",case = case,questionnaire = questionnaire)
-undebug(map_to_result)
-case
-edu1<-map_to_result(assessment_data,dependent.var = "hhexperienced",independent.var = 'region',case = case,questionnaire = questionnaire)
-
-
-lbld<-edu1 %>% map_to_labeled(questionnaire) 
-
-lbld %>% map_to_table
-
-vis<-edu1 %>% map_to_labeled(questionnaire) %>%  map_to_visualisation
-vis
-```
-
-```{r}
-
-map_to_result(assessment_data,"hhexperienced",
-              case=map_to_case('direct_reporting','categorical'),
-              questionnaire = questionnaire) %>% map_to_visualisation
-
-
-
-```
-
-
-
-
-
-
-
+That would be too easy (coming soon!)
 
 
