--- a/vignettes/apply_analysis_plan.Rmd
+++ b/vignettes/apply_analysis_plan.Rmd
@@ -60,7 +60,7 @@ analysisplan<-load_analysisplan(df = hypegrammaR::test_analysisplan)
 
 # Run the analysis plan & save outputs as an html file
 
-```{r 7,eval = T, warnings = F}
+```{r 7,eval = T, warnings = F, echo = F}
 list_of_results <- assessment_data %>%  from_analysisplan_map_to_output(analysisplan = analysisplan,
                                                                         weighting = weights,
                                                                         questionnaire = questionnaire) 
@@ -69,7 +69,7 @@ list_of_results <- assessment_data %>%  from_analysisplan_map_to_output(analysis
 ```
 
 ### Output as html
-```{r 8,eval = T, warning = F}
+```{r 8,eval = T, warning = F, echo = F}
 
 list_of_results %>% map_to_template(questionnaire = questionnaire,
                                     dir = "../",
