--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -53,6 +53,7 @@ For this step only, you need a more or less stable internet connection.
 #### Load the hypegrammaR package
 ```{r,warning=FALSE,message=FALSE}
 library(hypegrammaR)
+library(koboquest)
 ```
 
 #### Load your files
@@ -104,9 +105,7 @@ The parameters are:
 - `choices.label.column.to.use`: the exact name of the column containing the labels that should be used. You can add an extra column with custom labels to your choices sheet if you don't want to use the choice labels from the original questionnaire
 
 ```{r}
-koboquestions<-read.csv("../tests/testthat/test_questionnaire_questions.csv")
-kobochoices<-  read.csv("../tests/testthat/test_questionnaire_choices.csv")
-questionnaire<-load_questionnaire(data = assessment_data,
+questionnaire<- koboquest::load_questionnaire(data = assessment_data,
                                   questions = "../data/test_questionnaire_questions.csv",
                                   choices = "../data/test_questionnaire_choices.csv",
                                   choices.label.column.to.use = "label::English"
