--- a/inst/md_templates/templates_analysisplan_report.rmd
+++ b/inst/md_templates/templates_analysisplan_report.rmd
@@ -30,8 +30,8 @@ for(rq in unique(analysisplan$research.question)){
     htmltools::h2(srq) %>% as.character %>% cat
     
     for(i in which(in_rq & in_srq)){
-    print(results[[i]] %>% map_to_visualisation %>% .$ggplot)
-    print(results[[i]] %>% map_to_visualisation_heatmap %>% .$ggplot)
+    tryCatch(print(results[[i]] %>% map_to_visualisation %>% .$ggplot), error=function(e) print("Cant supply discrete values to a heatmap"))
+    tryCatch(print(results[[i]] %>% map_to_visualisation_heatmap %>% .$ggplot),error=function(e) print("Cant supply discrete values to a heatmap"))
     kable(resultlist$results[[i]]$hypothesis.test %>% as.data.frame,format="html")    }
     
   }
