--- a/inst/md_templates/templates_analysisplan_summary.Rmd
+++ b/inst/md_templates/templates_analysisplan_summary.Rmd
@@ -31,9 +31,10 @@ for(rq in unique(analysisplan$research.question)){
     
     for(i in which(in_rq & in_srq)){
     table <- results[[i]] %>% map_to_table 
-    results[[i]]$summary.statistic %>% cat
+    results[[i]]$summary.statistic %>% kable
     if(!is.null(results[[i]]$hypothesis.test$result$p.value)){
-    c(results[[i]]$hypothesis.test$name, "P Value:", results[[i]]$hypothesis.test$result$p.value) %>% cat}
+    c(as.character(unique(results[[i]]$hypothesis.test$name)), "P Value:") %>% cat
+    results[[i]]$hypothesis.test$result$p.value %>% print}
     kable(resultlist$results[[i]]$hypothesis.test %>% as.data.frame,format="html")    }
     
   }
