--- a/vignettes/apply_analysis_plan.Rmd
+++ b/vignettes/apply_analysis_plan.Rmd
@@ -77,6 +77,7 @@ list_of_results <- assessment_data %>%  from_analysisplan_map_to_output(analysis
 
 list_of_results %>% map_to_template(questionnaire = questionnaire,
                                     dir = "../",
+                                    type = "summary",
                                     filename = "my_example_report.html")
 
 ```
