map_to_master_table function

--- a/inst/md_templates/templates_analysisplan_report_visuals.Rmd
+++ b/inst/md_templates/templates_analysisplan_report_visuals.Rmd
@@ -14,7 +14,7 @@ library(hypegrammaR)
 ```
 
 
-```{r,include=T,warning=F,error=F,message=F,echo=FALSE,results='asis'}
+```{r 1,include=T,warning=F,error=F,message=F,echo=FALSE,results='asis'}
 resultlist <- x
 analysisplan<-resultlist$analysisplan
 knitr::kable(analysisplan,format = "html")
