--- a/inst/md_templates/templates_analysisplan_report_visuals.Rmd
+++ b/inst/md_templates/templates_analysisplan_report_visuals.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 
-```{r setup, include=FALSE}
+```{r setup_visuals, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(htmltools)
 library(hypegrammaR)
