--- a/vignettes/apply_analysis_plan.Rmd
+++ b/vignettes/apply_analysis_plan.Rmd
@@ -73,10 +73,10 @@ list_of_results <- assessment_data %>%  from_analysisplan_map_to_output(analysis
 ```
 
 ### Output as html
-```{r 9,eval = T, warning = F, echo = F}
+```{r 9,eval = F, warning = F, echo = F}
 
 list_of_results %>% map_to_template(questionnaire = questionnaire,
-                                    dir = "C:/Users/Martin Barner/",
+                                    dir = "./",
                                     type = "summary",
                                     filename = "my_example_report.html")
 
